--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "moduleResolution": "NodeNext",
     "target": "ES2020",
     "module": "CommonJS",
     "lib": ["ES2020"],                   
