--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,36 @@ services:
       - "3002:3000" # Accès au backend
     environment:
       - NODE_ENV=development
+      - MAIL_HOST=mailpit
+      - MAIL_PORT=1025
+    networks:
+      - app-network
+
+  mailpit:
+    image: 'axllent/mailpit:latest'
+    ports:
+      - "8025:8025" # Web interface
+      - "1025:1025" # SMTP server
+    networks:
+      - app-network
+
+  postgres:
+    image: postgres:latest
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root_password
+      - POSTGRES_DB=default_database
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
     networks:
       - app-network
 
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  postgres-data:
+    driver: local
