--- a/client/Dockerfile.prod
+++ b/client/Dockerfile.prod
@@ -7,7 +7,7 @@ COPY . .
 RUN npm run build
 
 # Étape 2 : Serveur web pour le build
-FROM nginx:alpine AS client
+FROM nginx:alpine AS production
 COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
